Make main source Java 8 compatible